tests/e2e/try_catch_interpolation.error
Error: syntax error in story at line 3, column 1

3|    catch as e
      ^^^^^^^^^^

E0136: Access to the exception object is currently disallowed.
