tests/e2e/try_catch_interpolation.story
try
   throw "error"
catch as e
   log info msg: "{e}"
